k8s/messaging-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app
  namespace: messaging-app
spec:
  selector:
    app: messaging-app
  ports:
    - port: 8080
      targetPort: 8080
