k8s/pgbouncer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: messaging-app
spec:
  selector:
    app: pgbouncer
  ports:
    - port: 6432
      targetPort: 6432
