k8s/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: messaging-app
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
