k8s/wiremock-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiremock
  namespace: messaging-app
spec:
  selector:
    app: wiremock
  ports:
    - port: 8080
      targetPort: 8080
